idea/testData/multiModuleHighlighting/platform1/header/header.kt
header class <error descr="[HEADER_WITHOUT_IMPLEMENTATION] No implementation is found for header declaration 'My'">My</error> {

}